# advent-of-code-2020

./: .gitignore  LICENSE  README.md
common/: README.md  common.hpp
recap/reports/: D1-3.md  D4-6.md
src/day1/: README.md  solution.py
src/day1/cpp/: solution.cpp
src/day1/python/: solution.py
src/day10/: README.md  solution.cpp
src/day10/cpp/: solution.cpp
src/day11/: README.md
src/day11/python/: ans.py  solution.py
src/day12/: README.md  solution.py
src/day12/python/: solution.py
src/day14/: README.md
src/day14/cpp/: CMakeLists.txt  problematic_solution.cpp  solution.cpp
src/day15/: README.md
src/day15/python/: solution.py
src/day17/: README.md
src/day17/cpp/: CMakeLists.txt  conanfile.txt  solution.cpp
src/day17/python/: solution.py
src/day18/: README.md
src/day18/python/: solution.py
src/day19/: README.md
src/day19/python/: ans.py  solution.py
src/day2/: README.md  solution.py
src/day2/cpp/: CMakeLists.txt  solution.cpp
src/day21/: README.md  ans.py
src/day21/cpp/: CMakeLists.txt  solution.cpp
src/day22/: README.md
src/day22/python/: solution.py
src/day23/: README.md
src/day23/python/: ans.py
src/day24/: README.md
src/day24/python/: solution1.py
src/day25/: README.md
src/day25/python/: solution.py
src/day3/: README.md
src/day3/cpp/: solution.cpp
src/day3/python/: solution.py
src/day4/: README.md
src/day4/python/: solution.py
src/day5/: README.md
src/day6/: README.md
src/day7/: README.md
src/day8/: README.md  ans.py  solution.py
src/day9/: README.md  solution.cpp
(+11 files in other folders)
